--- a/css/component.css
+++ b/css/component.css
@@ -222,7 +222,10 @@
   border-top: thin solid rgba(255, 255, 255, 0.5);
 }
 .my-footer > div .right-col p span {
-  display: block;
+  display: inline-block;
+}
+.my-footer > div .right-col p span a {
+  color: inherit;
 }
 
 /*# sourceMappingURL=component.css.map */
