--- a/css/main.css
+++ b/css/main.css
@@ -139,12 +139,10 @@
 .profile {
   padding: 45px 0;
 }
-@media (max-width: 768px) {
-  .profile figure {
-    flex-direction: column;
-  }
+.profile figure {
+  flex-wrap: wrap;
 }
-@media (min-width: 500px) and (max-width: 980px) {
+@media (min-width: 500px) and (max-width: 950px) {
   .profile figure img {
     width: 50%;
   }
@@ -152,13 +150,13 @@
 .profile figure figcaption {
   margin: 0 27px;
 }
-@media (min-width: 768px) {
+@media (min-width: 950px) {
   .profile figure figcaption {
     width: 35%;
     margin: 0 70px;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 950px) {
   .profile figure figcaption h2 {
     margin-top: 0;
   }
@@ -336,10 +334,8 @@
     border: none;
   }
 }
-@media (max-width: 768px) {
-  .projects .likestore .imgGroup {
-    flex-direction: column;
-  }
+.projects .likestore .imgGroup {
+  flex-wrap: wrap;
 }
 .projects .likestore .imgGroup .imgBox {
   margin-bottom: 0.8rem;
@@ -351,12 +347,8 @@
 }
 .projects .projectMix {
   align-items: stretch;
+  flex-wrap: wrap;
   margin-top: 1.5rem;
-}
-@media (max-width: 1250px) {
-  .projects .projectMix {
-    flex-direction: column;
-  }
 }
 @media (min-width: 1250px) {
   .projects .projectMix .crm {
