--- a/css/work.css
+++ b/css/work.css
@@ -2,42 +2,48 @@
 @import "component.css";
 /* CSS Document */
 /* CSS Document */
-.section-desc {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .section-info figure {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.workWrap .contentWrap {
-  position: relative;
-}
-.workWrap .contentWrap section {
+.workWrap section {
   box-sizing: border-box;
   border: 1rem solid #FFFFFF;
 }
 @media (max-width: 480px) {
-  .workWrap .contentWrap section {
+  .workWrap section {
     border: none;
   }
 }
+.workWrap .contentWrap {
+  position: relative;
+  max-width: 1600px;
+  margin: 0 auto;
+}
 
-@media (max-width: 1250px) {
+@media (min-width: 1250px) {
+  .section-info {
+    height: 100vh;
+  }
+}
+@media (max-width: 768px) {
   .section-info figure {
     flex-direction: column;
   }
 }
-@media (min-width: 1251px) {
+@media (min-width: 769px) {
   .section-info figure img {
-    width: 900px;
+    width: 65%;
   }
+}
+.section-info figure figcaption {
+  margin: 0 27px 1rem;
+}
+@media (min-width: 769px) {
   .section-info figure figcaption {
-    width: 35%;
+    width: 32%;
     margin: 0 70px;
   }
 }
@@ -47,10 +53,26 @@
 }
 
 .section-desc {
-  margin: 5rem 0 1.5rem;
+  margin: 0 0 1.5rem;
+  display: flex;
+  flex-wrap: wrap;
 }
-.section-desc figure {
-  width: 50%;
+@media (min-width: 769px) {
+  .section-desc figure {
+    width: 50%;
+  }
+}
+
+.section-demo {
+  background: #F0F0F0;
+  padding: 3rem 0;
+}
+.section-demo figure {
+  padding-top: 5px;
+  width: 75%;
+  margin: 0 auto;
+  background: #FFFFFF;
+  border-radius: 8px;
 }
 
 /*# sourceMappingURL=work.css.map */
