--- a/sass/work.scss
+++ b/sass/work.scss
@@ -65,11 +65,18 @@
 .section-demo {
 	background: #F0F0F0;
 	padding: 3rem 0;
+	@media (max-width: 768px) {
+		padding: 1rem 0;
+	}
 	figure {
 		padding-top: 5px;
 		width: 75%;
-		margin: 0 auto;
+		margin: 0 auto 3rem;
 		background: $white;
 		border-radius: 8px;
+		@media (max-width: 768px) {
+			width: 90%;
+			margin-bottom: 1rem;
+		}
 	}
 }
