--- a/css/work.css
+++ b/css/work.css
@@ -75,11 +75,33 @@
   }
 }
 @media (min-width: 769px) {
+  .section-desc.space.narrow-left figure .block {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+  }
+  .section-desc.space.narrow-left figure .block img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
   .section-desc.space.narrow-left figure:first-child {
     width: 38.2%;
   }
+  .section-desc.space.narrow-left figure:first-child .dummy {
+    padding-top: 100%;
+  }
   .section-desc.space.narrow-left figure:last-child {
     width: 60.6%;
+  }
+  .section-desc.space.narrow-left figure:last-child .dummy {
+    padding-top: 62.9%;
   }
 }
 .section-desc.copyright {
