--- a/sass/work.scss
+++ b/sass/work.scss
@@ -73,11 +73,33 @@
 		&.narrow-left {
 			@media (min-width: 769px) {
 				figure {
+					.block {
+						position: absolute;
+						top: 0;
+						right: 0;
+						bottom: 0;
+						left: 0;
+						display: flex;
+						align-items: center;
+						justify-content: center;
+						overflow: hidden;
+						img {
+							width: 100%;
+							height: 100%;
+							object-fit: cover;
+						}
+					}
 					&:first-child {
-						width: 38.2%
+						width: 38.2%;
+						.dummy {
+							padding-top: 100%;
+						}
 					}
 					&:last-child {
-						width: 60.6%
+						width: 60.6%;
+						.dummy {
+							padding-top: 62.9%;
+						}
 					}
 				}
 			}
