--- a/css/ui.css
+++ b/css/ui.css
@@ -84,6 +84,16 @@ img {
 .btn.btn-primary:hover {
   box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.6), 0 2px 2px 0 rgba(0, 0, 0, 0.6), 0 1px 5px 0 rgba(0, 0, 0, 0.6);
 }
+.btn.btn-outline {
+  padding: 0.5rem 1rem;
+  color: #000000;
+  background-color: transparent;
+  border: thin solid rgba(0, 0, 0, 0.8);
+}
+.btn.btn-outline:hover {
+  background-color: rgba(0, 0, 0, 0.15);
+  transition: all 1s ease-out;
+}
 
 /*BEGIN font-size*/
 h1 {
