--- a/css/component.css
+++ b/css/component.css
@@ -136,4 +136,56 @@
   visibility: visible;
 }
 
+.stickyNav {
+  right: 0;
+  top: 0;
+  z-index: 2;
+  font-size: 14px;
+  letter-spacing: 0.8px;
+  text-align: right;
+  transition: all 1s ease-out;
+  background: rgba(255, 255, 255, 0.85);
+  width: 100%;
+  height: 45px;
+}
+.stickyNav button.open-menu {
+  margin: 5px 16px;
+}
+.stickyNav ul {
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
+  background-color: #FFFFFF;
+  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.6);
+}
+.stickyNav ul.menu-mobile-hidden {
+  display: none;
+}
+.stickyNav ul li {
+  padding: 2px 8px 3px;
+  position: relative;
+  text-align: center;
+}
+.stickyNav ul li:hover {
+  cursor: pointer;
+  background: rgba(0, 0, 0, 0.6);
+}
+.stickyNav ul li:hover a {
+  color: #FFFFFF;
+}
+.stickyNav ul li.active {
+  background: #000000;
+}
+.stickyNav ul li.active a {
+  color: #FFFFFF;
+}
+.stickyNav ul li a {
+  color: #000000;
+  display: block;
+  padding: 1rem 0;
+}
+.stickyNav ul li a:active {
+  background: transparent;
+}
+
 /*# sourceMappingURL=component.css.map */
