--- a/css/work.css
+++ b/css/work.css
@@ -2,6 +2,7 @@
 @import "component.css";
 /* CSS Document */
 /* CSS Document */
+@import url("https://fonts.googleapis.com/css2?family=Muli:wght@400;800&family=Noto+Serif+TC:wght@700&family=Playfair+Display:ital,wght@0,700;1,700&display=swap");
 .section-desc, .section-info figure {
   display: flex;
   align-items: center;
