--- a/sass/work.scss
+++ b/sass/work.scss
@@ -3,6 +3,8 @@
 @import "component.css";
 @import "variable";
 @import "extend";
+@import url('https://fonts.googleapis.com/css2?family=Muli:wght@400;800&family=Noto+Serif+TC:wght@700&family=Playfair+Display:ital,wght@0,700;1,700&display=swap');
+
 .workWrap {
 	section {
 		box-sizing: border-box;
