Compress google fonts

--- a/css/work.css
+++ b/css/work.css
@@ -1,8 +1,8 @@
 @import "ui.css";
 @import "component.css";
+@import "fonts-work.css";
 /* CSS Document */
 /* CSS Document */
-@import url("https://fonts.googleapis.com/css2?family=Muli:wght@400;800&family=Noto+Serif+TC:wght@700&family=Playfair+Display:ital,wght@0,700;1,700&display=swap");
 .section-desc, .section-info figure {
   display: flex;
   align-items: center;
