--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,9 +1,9 @@
 ﻿@charset "utf-8";
 @import "ui.css";
 @import "component.css";
+@import "fonts-main.css";
 @import "variable";
 @import "extend";
-@import url('https://fonts.googleapis.com/css2?family=Oleo+Script&family=Muli:wght@400;800&family=Noto+Serif+TC:wght@700&family=Playfair+Display:ital,wght@0,700;1,700&family=Noto+Sans+TC:wght@700&display=swap');
 .contentWrap {
 	position: relative;
 }
