--- a/sass/work.scss
+++ b/sass/work.scss
@@ -106,12 +106,6 @@
 			}
 		}
 	}
-	&.copyright {
-		align-items: baseline;
-		a {
-			color: $black;
-		}
-	}
 }
 .section-demo {
 	background: #F0F0F0;
@@ -122,7 +116,6 @@
 	figure {
 		width: 75%;
 		margin: 0 auto 3rem;
-		background: $white;
 		@media (max-width: 768px) {
 			width: 90%;
 			margin-bottom: 1rem;
@@ -130,7 +123,14 @@
 		&.border-radius {
 			padding-top: 5px;
 			border-radius: 8px;
+			background: $white;
 		}
+	}
+}
+.copyright {
+	align-items: baseline;
+	a {
+		color: $black;
 	}
 }
 .buttons {
