--- a/sass/work.scss
+++ b/sass/work.scss
@@ -82,19 +82,21 @@
 			@media (min-width: 769px) {
 				figure {
 					.block {
-						position: absolute;
-						top: 0;
-						right: 0;
-						bottom: 0;
-						left: 0;
-						display: flex;
-						align-items: center;
-						justify-content: center;
-						overflow: hidden;
-						img {
-							width: 100%;
-							height: 100%;
-							object-fit: cover;
+						picture {
+							position: absolute;
+							top: 0;
+							right: 0;
+							bottom: 0;
+							left: 0;
+							display: flex;
+							align-items: center;
+							justify-content: center;
+							overflow: hidden;
+							img {
+								width: 100%;
+								height: 100%;
+								object-fit: cover;
+							}
 						}
 					}
 					&:first-child {
