--- a/sass/work.scss
+++ b/sass/work.scss
@@ -51,6 +51,10 @@
 				width: 32%;
 				margin: 0 70px
 			}
+			.dev-team {
+				margin-top: 1rem;
+				line-height: 1.7rem;
+			}
 		}
 	}
 	.info {
