--- a/sass/work.scss
+++ b/sass/work.scss
@@ -150,6 +150,14 @@
 			padding-top: 1.5rem;
 		}
 	}
+	h3 {
+		width: 75%;
+		margin: 1rem auto 1.5rem;
+		@media (max-width: 768px) {
+			width: 90%;
+			margin-top: 2rem;
+		}
+	}
 }
 .copyright {
 	align-items: baseline;
