--- a/sass/ui.scss
+++ b/sass/ui.scss
@@ -82,6 +82,13 @@ img {
 	}
 }
 
+.txt-center {
+	text-align: center;
+}
+.pt-2 {
+	padding-top: 2rem;
+}
+
 /*BEGIN font-size*/
 h1{font-size:4.3rem;}
 .f-44{font-size:2.8rem;}
