Add design process to ophi page

--- a/css/ui.css
+++ b/css/ui.css
@@ -106,6 +106,10 @@ img {
   padding-top: 2.5rem;
 }
 
+.mb-0 {
+  margin-bottom: 0 !important;
+}
+
 /*BEGIN font-size*/
 h1 {
   font-size: 4.3rem;
