--- a/sass/component.scss
+++ b/sass/component.scss
@@ -11,7 +11,7 @@
 	top: 50%;
 	transform:translate(-50%,-50%);
 	width: 100%;
-	max-width: 650px;
+	max-width: 800px;
 	@media (max-width: 680px) {
 		background-color: $white;
 	}
@@ -51,6 +51,7 @@
 			height: calc(100vh - 4rem);
 			@media (min-width: 680px) {
 				max-height: 75vh;
+				padding: 1rem 2.4rem;
 			}
 		}
 		.modal-footer {
@@ -94,8 +95,7 @@
 .tooltip {
 	position: relative;
 	display: inline-block;
-	border-bottom: 1px dotted $black;
-
+	font-style: normal;
 	.tooltip-text {
 		visibility: hidden;
 		font-size: 12px;
