--- a/css/component.css
+++ b/css/component.css
@@ -14,7 +14,7 @@
   top: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
-  max-width: 650px;
+  max-width: 800px;
 }
 @media (max-width: 680px) {
   .modal {
@@ -64,6 +64,7 @@
 @media (min-width: 680px) {
   .modal .modal-content .modal-body {
     max-height: 75vh;
+    padding: 1rem 2.4rem;
   }
 }
 .modal .modal-content .modal-footer {
@@ -104,7 +105,7 @@
 .tooltip {
   position: relative;
   display: inline-block;
-  border-bottom: 1px dotted #000000;
+  font-style: normal;
 }
 .tooltip .tooltip-text {
   visibility: hidden;
