--- a/sass/main.scss
+++ b/sass/main.scss
@@ -126,20 +126,23 @@
 		.modal-body {
 			.label {
 				color: $gray;
+				padding-top: 1rem;
 			}
 			.career {
 				display: flex;
-				margin: 1.5rem 2rem;
+				margin: 1.5rem 0;
 				.period {
-					width: 34%;
+					width: 28%;
 					padding-right: 5%;
+					color: $gray;
 					.company {
 						font-family: Playfair Display;
+						color: $black;
+						margin-bottom: 0.5rem;
 					}
 					.location {
 						font-size:.812rem;
 						position: relative;
-						color: $gray;
 						margin-top: 0.4rem;
 						padding-left: 1.1rem;
 						&:before {
@@ -156,7 +159,14 @@
 					width: 60%;
 					.jobTitle {
 						color: rgba($black, 0.8);
-						padding-bottom: 0.4rem;
+						padding-bottom: 0.7rem;
+						@extend %d-flex-between;
+						.skill {
+							img {
+								height: 20px;
+								margin: 0 0.05rem;
+							}
+						}
 					}
 				}
 				@media (max-width: 680px) {
@@ -184,7 +194,6 @@
 					padding-left: 1.5rem;		
 					@media (min-width: 480px) {
 						column-count: 3;
-						padding-left: 3rem;
 						margin: 0.5rem 0 1.5rem;
 					}
 					li {
@@ -193,16 +202,13 @@
 				}
 			}
 			@media (min-width: 681px) {
-				background-color: #F5F5F5;
+				background-color: #ededed;
 				.career {
 					align-items: stretch;
-					background: linear-gradient(135deg, $gray 15px, $white 0) top left;
-					padding: 1rem;
+					background: white;
+					padding: 1.3rem;
 					min-height: 85px;
-					border-radius: 4px;
-					box-shadow: 0 2px 1px -1px rgba($black, 0.2),
-								0 1px 1px 0 rgba($black, 0.14),
-								0 1px 3px 0 rgba($black, 0.12);
+					border-radius: 14px;
 					.period {
 						display: flex;
 						flex-direction: column;
