--- a/sass/ui.scss
+++ b/sass/ui.scss
@@ -50,6 +50,11 @@ img {
 			background-color: transparent;
 			img {
 				width: 20px;
+				&.link {
+					width: 18px;
+					filter: opacity(0.6);
+					top: -3px;
+				}
 			}
 		}
 		img {
