--- a/css/ui.css
+++ b/css/ui.css
@@ -103,6 +103,14 @@ img {
   text-align: center;
 }
 
+.txt-left {
+  text-align: left;
+}
+
+.pt-1 {
+  padding-top: 1rem;
+}
+
 .pt-2 {
   padding-top: 2rem;
 }
@@ -111,8 +119,20 @@ img {
   padding-top: 2.5rem;
 }
 
+.pt-4 {
+  padding-top: 4rem;
+}
+
 .mb-0 {
   margin-bottom: 0 !important;
+}
+
+.mb-1 {
+  margin-bottom: 0.5rem !important;
+}
+
+.mb-2 {
+  margin-bottom: 2rem;
 }
 
 /*BEGIN font-size*/
