--- a/sass/ui.scss
+++ b/sass/ui.scss
@@ -90,14 +90,29 @@ img {
 .txt-center {
 	text-align: center;
 }
+.txt-left {
+	text-align: left;
+}
+.pt-1 {
+	padding-top: 1rem;
+}
 .pt-2 {
 	padding-top: 2rem;
 }
 .pt-3 {
 	padding-top: 2.5rem;
 }
+.pt-4 {
+	padding-top: 4rem;
+}
 .mb-0 {
-	margin-bottom: 0!important;
+	margin-bottom: 0 !important;
+}
+.mb-1 {
+	margin-bottom: 0.5rem !important;
+}
+.mb-2 {
+	margin-bottom: 2rem;
 }
 
 /*BEGIN font-size*/
